--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "autoprefixer": "^9.4.5",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
